fixed a bug where cart subtotal was 1 step behind the items in cart, fixed another bug where when clicking on an item in cart the item details were the item that was added to cart last instead of the item detail of the picture clicked

--- a/src/styles/cart.css
+++ b/src/styles/cart.css
@@ -21,8 +21,18 @@
   grid-template-columns: 50px 200px 50px;
   grid-template-rows: 80px;
   height: 80px;
-  width: 300px;
+  width: 340px;
   transition: opacity 0.7s;
+}
+
+.checkout{
+  border: none;
+  font-family: monospace;
+  background-color: black;
+  color: white;
+  height: 60px;
+  
+  
 }
 
 .cartItemImg{
